Continue work on exercise 2 problem set 1.

--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -413,7 +413,7 @@
       "<tr><th>$T/^{\\circ} C$</th><th>$k/s^{-1}$</th><th>$\\sigma_k/s^{-1}$</th><tr>\n",
       "<tr><td>20</td><td>0.0000188</td><td>0.0000089</td></tr>\n",
       "<tr><td>30</td><td>0.0000694</td><td>0.0000073</td></tr>\n",
-      "<tr><td>40</td><td>0.000260</td><td>0.0000013</td></tr>\n",
+      "<tr><td>40</td><td>0.000260</td><td>0.000023</td></tr>\n",
       "<tr><td>50</td><td>0.000888</td><td>0.000067</td></tr>\n",
       "<tr><td>60</td><td>0.00293</td><td>0.00021</td></tr>\n",
       "</table>\n",
@@ -422,14 +422,16 @@
       "\n",
       "$$k(T)=A e^{-\\frac{E_a}{R T}} ,$$\n",
       "\n",
-      "where $E_a$ is the chemical reaction activation energy, $A$ is the so called pre-exponential factor related to the frequency of molecular collisions, $R$ is the ideal gas constant."
+      "where $E_a$ is the chemical reaction activation energy, $A$ is the so called pre-exponential factor related to the frequency of molecular collisions, $R$ is the ideal gas constant.\n",
+      "\n",
+      "* From the rate constant values on the table above, and the rate constant value which you have determined, fit the data to an Arrhenius curve to the determine the pre-exponential factor and the activation energy for this reaction. (Note that the uncertaities associated with each rate constant are different.)"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ktemp=array([array([20,30,40,50,60,65])+273.15,array([0.0000188,0.0000694,0.000260,0.000888,0.00293,n2o5_fit[0][0]]),array([0.0000089,0.0000073,0.0000013,0.000067,0.00021,sqrt(n2o5_fit[1][0,0])])])\n",
+      "ktemp=array([array([20,30,40,50,60,65])+273.15,array([0.0000188,0.0000694,0.000260,0.000888,0.00293,n2o5_fit[0][0]]),array([0.0000089,0.0000073,0.000023,0.000067,0.00021,sqrt(n2o5_fit[1][0,0])])])\n",
       "ktemp"
      ],
      "language": "python",
@@ -500,9 +502,47 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If you are finding difficulties finding a suitable initial guess for the non-linear Arrhenius fit, or if on the other hand you got your answers quickly, let's try a different approach.\n",
+      "\n",
+      "The Arrhenius equation is non-linear function of $T$, but the equation can be converted into an amenable for linear fit. This can be done by taking the natural logarithm of the Arrhenius equation:\n",
+      "\n",
+      "$$ln(k)=ln(A)-\\frac{E_a}{R}\\frac{1}{T} .$$\n",
+      "\n",
+      "We have just obtained a linear relationship between $ln(k)$ and $\\frac{1}{T}$, where the intercept is $ln(A)$ and teh slope $-\\frac{E_a}{R}$. It should be noted that only in few cases is it possible to transform a non-linear fit into a linear one in this way.\n",
+      "\n",
+      "* From the data, plot the of $ln(k)$ as a function of $\\frac{1}{T}$."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "ktemp[2]/ktemp[1]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "errorbar((1/ktemp[0]),log(ktemp[1]),yerr=(ktemp[2]/ktemp[1]),marker='o',linestyle='None')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "polyfit((1/ktemp[0]),log(ktemp[1]),1,full=True)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
