Complete first version of problem set 1.

--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -335,8 +335,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#is there a more elegant way of doing this?\n",
-      "errorbar(n2o5[:,0],n2o5[:,1],yerr=array([n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err]),marker='o',linestyle='none')\n",
+      "errorbar(n2o5[:,0],n2o5[:,1],yerr=ones(19)*n2o5_err,marker='o',linestyle='none')\n",
       "xlabel('t/s')\n",
       "ylabel('$[N_2 O_5]/mol.dm^{-3}$')\n",
       "show()"
@@ -393,7 +392,7 @@
       "k=n2o5_fit[0][0]\n",
       "C0=n2o5_fit[0][1]\n",
       "\n",
-      "errorbar(t,n2o5[:,1],yerr=array([n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err]),marker='o',linestyle='none')\n",
+      "errorbar(t,n2o5[:,1],yerr=ones(19)*n2o5_err,marker='o',linestyle='none')\n",
       "plot(t,rate1(t,k,C0),linestyle='--')\n",
       "xlabel('t/s')\n",
       "ylabel('$[N_2 O_5]/mol.dm^{-3}$')\n",
@@ -509,18 +508,19 @@
       "\n",
       "The Arrhenius equation is non-linear function of $T$, but the equation can be converted into an amenable for linear fit. This can be done by taking the natural logarithm of the Arrhenius equation:\n",
       "\n",
-      "$$ln(k)=ln(A)-\\frac{E_a}{R}\\frac{1}{T} .$$\n",
+      "$$\\ln(k)=\\ln(A)-\\frac{E_a}{R}\\frac{1}{T} .$$\n",
       "\n",
-      "We have just obtained a linear relationship between $ln(k)$ and $\\frac{1}{T}$, where the intercept is $ln(A)$ and teh slope $-\\frac{E_a}{R}$. It should be noted that only in few cases is it possible to transform a non-linear fit into a linear one in this way.\n",
+      "We have just obtained a linear relationship between $\\ln(k)$ and $\\frac{1}{T}$, where the intercept is $\\ln(A)$ and the slope $-\\frac{E_a}{R}$. It should be noted that only in few cases is it possible to transform a non-linear fit into a linear one in this way.\n",
       "\n",
-      "* From the data, plot the of $ln(k)$ as a function of $\\frac{1}{T}$."
+      "* From the data, plot the of $\\ln(k)$ as a function of $\\frac{1}{T}$, and fit it to a linear function (do not consider error bars in this fit). How do your results compare with the non-linear fit above?"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ktemp[2]/ktemp[1]"
+      "klinfit_nerr=polyfit((1/ktemp[0]),log(ktemp[1]),1,cov=True)\n",
+      "klinfit_nerr"
      ],
      "language": "python",
      "metadata": {},
@@ -530,7 +530,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "errorbar((1/ktemp[0]),log(ktemp[1]),yerr=(ktemp[2]/ktemp[1]),marker='o',linestyle='None')\n",
+      "klinfit_nerr_line=klinfit_nerr[0][1]+klinfit_nerr[0][0]*(1/ktemp[0])\n",
+      "\n",
+      "plot((1/ktemp[0]),log(ktemp[1]),marker='o',linestyle='None')\n",
+      "plot((1/ktemp[0]),klinfit_nerr_line,linstyle='--')\n",
+      "xlable('1/T /K')\n",
+      "ylabel(r'$\\ln(k) /\\ln(s^{-1})$')\n",
       "show()"
      ],
      "language": "python",
@@ -538,10 +543,40 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In the previous question we performed a fit without taking the error bars of the data into account. This is equivalent to considering all the $\\ln(k)$ data point have the same uncertainty. From the $T$ vs $k$ table above we know this is not the case, and we should take the uncertainties into account. Note however that $\\sigma_k$ is not the same as $\\sigma_{\\ln(k)}$, and also $\\sigma_{\\ln(k)}\\neq\\ln(\\sigma_k)$! There are [general methods](http://en.wikipedia.org/wiki/Propagation_of_uncertainty#Simplification) to propagate the uncertainty of a value upon a mathematical operation. For the present purposes however, we will focus on the case of the logarithm at hand:\n",
+      "\n",
+      "$$\\sigma_{\\ln(k)}=\\frac{\\sigma_k}{k} .$$\n",
+      "\n",
+      "* Plot the values of $\\ln(k)$ as a function of $\\frac{1}{T}$ with appropriate error bars. Note the values of the error bars at low $T$ values. What do you expect the relative contribution of these data points to the linear fit to be?\n",
+      "\n",
+      "* Fit the data taking into account the error bars (recall the differences between functions *polyfit* and *curve_fit* in dealing with data points uncertainty). How do the results obtained via this proceedure compare with the ones obtained via direct exponential fit?"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "polyfit((1/ktemp[0]),log(ktemp[1]),1,full=True)"
+      "klinfit_err=polyfit((1/ktemp[0]),log(ktemp[1]),1,w=1/(ktemp[2]/ktemp[0])**2,cov=True)\n",
+      "klinfit_err"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "klinfit_err_line=klinfit_err[0][1]+klinfit_err[0][0]*(1/ktemp[0])\n",
+      "\n",
+      "errbar((1/ktemp[0]),log(ktemp[1]),yerr=(ktemp[2]/ktemp[0]),marker='o',linestyle='None')\n",
+      "plot((1/ktemp[0]),klinfit_err_line,linstyle='--')\n",
+      "xlable('1/T /K')\n",
+      "ylabel(r'$ln(k) /ln(s^{-1})$')\n",
+      "show()"
      ],
      "language": "python",
      "metadata": {},
