--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -21,7 +21,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# An Introduction to Plotting and Data Analysis in Python Workshop 2\n",
+      "# An Introduction to Plotting and Data Analysis in Python: Workshop 2\n",
       "[Clyde Fare](mailto://c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto://malhado@imperial.ac.uk), Imperial College London. \n",
       "\n",
       "The notebook is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
@@ -33,7 +33,7 @@
      "source": [
       "Overview\n",
       "--------\n",
-      "During this workshop we will recap what we covered in workshop then build on it covering importing of modules to extend the functionality we have access to and reading and writing of data and plots. We will then learn to fit data and use basic statistics to characterise how good our fit is.\n",
+      "During this workshop we will recap what we covered in workshop 1 then build on it covering importing of modules to extend the functionality we have access to and reading and writing of data and plots. We will then learn to fit data and use basic statistics to characterise how good our fit is.\n",
       "\n",
       "This is an interactive tutorial - as you go through it any time you see something that looks like this:\n",
       "\n",
@@ -245,9 +245,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Thus the above alice takes the zeroth (first) element of my_array and then every 3rd element up to but not including 10.\n",
+      "Thus the above slice takes the zeroth (first) element of my_array and then every 3rd element up to but not including 10.\n",
       "\n",
-      "If the first index is omitted, it we start at the zeroth index.\n",
+      "If the first index is omitted, it will start at the zeroth index.\n",
       "If the second index is omitted we move up to but not including the N+1th element\n",
       "If the third index is omitted the step size is 1 i.e we include all elements between the first index and the second index - 1\n",
       "\n",
@@ -322,7 +322,7 @@
      "source": [
       "Which is summarised by the following diagram:\n",
       "\n",
-      "<img src=numpy_indexing.png></img>"
+      "<img src=\"files/numpy_indexing.png\" />"
      ]
     },
     {
@@ -354,10 +354,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can plot using the **plot** and **scatter** commands and display using the **show** commands\n",
+      "We can plot using the **plot** command and display using the **show** command\n",
       "\n",
       "    plot(arange(10), arange(10)**2, label='$x^2$')\n",
-      "    scatter(arange(10), arange(10)**3, label='$x^3$' )\n",
+      "    plot(arange(10), arange(10)**3, label='$x^3$',marker='o',linestyle='None')\n",
       "    title('My reminder plot')\n",
       "    xlabel('x')\n",
       "    ylabel('y')\n",
@@ -384,7 +384,7 @@
       "    p_badger = age**3\n",
       "\n",
       "    plot(age, p_human, linewidth=2.5, linestyle=\"--\", label='Humans')\n",
-      "    scatter(age, p_badger, marker='^', color='red', label='Badgers' )\n",
+      "    plot(age, p_badger, marker='^', color='red', label='Badgers',marker='^',linestyle='None' )\n",
       "    title('My reminder plot')\n",
       "    xlabel('Age')\n",
       "    ylabel('Power')\n",
@@ -409,12 +409,74 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Log plot"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There are many occasions where we want to plot data on a logarthimic scale. To illustrate we will load some radioactivity data. Inside our data file are the half lives for some radioactive elements and their atomic numbers. If we load the data and simply plot atomic number versus half life. What we see is not very informative:\n",
+      "There are many occasions where we want to plot data on a logarthimic scale. To illustrate this, in the next code cell we difine the variable *r_data* with some radioactivity data. Namelly the half lives for some radioactive elements and their atomic numbers. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r_data=array([[  43,   1.29928320e+14],\n",
+      "       [  61,   5.59133280e+08],\n",
+      "       [  83,   5.99184000e+26],\n",
+      "       [  84,   3.21982560e+09],\n",
+      "       [  85,   2.90160000e+04],\n",
+      "       [  86,   3.30349968e+05],\n",
+      "       [  87,   1.30200000e+03],\n",
+      "       [  88,   5.01422400e+10],\n",
+      "       [  89,   6.87059064e+08],\n",
+      "       [  90,   4.43396160e+17],\n",
+      "       [  91,   1.03400237e+12],\n",
+      "       [  92,   1.40997456e+17],\n",
+      "       [  93,   6.76604880e+13],\n",
+      "       [  94,   2.50080480e+15],\n",
+      "       [  95,   2.32987968e+11],\n",
+      "       [  96,   4.91961600e+14],\n",
+      "       [  97,   4.34881440e+10],\n",
+      "       [  98,   2.84013216e+10],\n",
+      "       [  99,   4.07508192e+07],\n",
+      "       [  100,   8.68320000e+06],\n",
+      "       [  101,   4.44960000e+06],\n",
+      "       [  102,   1.00080000e+04],\n",
+      "       [  103,   3.60000000e+04],\n",
+      "       [  104,   4.71600000e+04],\n",
+      "       [  105,   2.00160000e+04],\n",
+      "       [  106,   6.98400000e+03],\n",
+      "       [  107,   5.40000000e+03],\n",
+      "       [  108,   3.99600000e+03],\n",
+      "       [  109,   1.80000000e+03],\n",
+      "       [  110,   2.40000000e+02],\n",
+      "       [  111,   6.00000000e+02],\n",
+      "       [  112,   2.40000000e+03],\n",
+      "       [  113,   1.20000000e+03],\n",
+      "       [  114,   7.98000000e+01],\n",
+      "       [  115,   6.00000000e+01],\n",
+      "       [  116,   1.20000000e-01],\n",
+      "       [  117,   5.00000000e-02],\n",
+      "       [  118,   5.00000000e-03]])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If we simply plot atomic number versus half life. What we see is not very informative:\n",
       "\n",
-      "    r_data = loadtxt('radioactivity_data.csv', delimiter=',')\n",
       "    atomic_nos = r_data[:,0]\n",
       "    half_lives = r_data[:,1]\n",
       "    plot(atomic_nos, half_lives)\n",
@@ -501,18 +563,18 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Reading and Writing"
+      "Reading and writing data to files"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The most common use case you will have when plotting data is plotting data that has been generated else where. That means you need a way to load data from somewhere into a notebook.\n",
+      "The most common use case you will have when plotting data is plotting data that has been generated else where.  Most modern measuring instruments will be coupled to a computer or otherwise will be able to store your data in a file. **You should always aim to store your data in a text file**. That means you need a way to load data into a notebook.\n",
       "\n",
       "There are severeal ways of doing this, the simplest is **loadtxt**\n",
       "\n",
-      "This loads data from a text files, provided the data layed out in a regular format. If you take a look at the file [data.txt](./data.txt) which is in the same directory as this notebook. You will see each lines contains numbers separated by spaces.\n",
+      "This loads data from text files, provided the data layed out in a regular format. If you take a look at the file [data.txt](./data.txt) which is in the same directory as this notebook. You will see each lines contains numbers separated by spaces.\n",
       "\n",
       "loadtxt will load this data into an array for us via:\n",
       "\n",
@@ -1330,7 +1392,7 @@
       "    \n",
       "    residuals_2 = fitted_Y2 - noisey_Y2\n",
       "    plot(X, residuals_2, marker='^', linestyle='None')\n",
-      "    plot(X,X-X,linestyle='--')\n",
+      "    plot(X,X-X,linestyle='--') #This trick adds a line at y=0. Do you understand how?\n",
       "    show()"
      ]
     },
