Finish revision of workshop 2 an add an exercise.

--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -1518,7 +1518,7 @@
       "\n",
       "    plot(x,y, linestyle='', marker='^')\n",
       "    plot(x, bad_fitted_y, linestyle='--', color='red', label='full_fit')\n",
-      "    plot(x, good_fitted_y, linestyle='--', color='blue', label='partial_fit')\n",
+      "    plot(x, good_fitted_y, linestyle='--', color='green', label='partial_fit')\n",
       "    legend(loc='center right')\n",
       "    \n",
       "    ylim([0,1.6])\n",
@@ -1544,7 +1544,7 @@
       "    good_res = fitting_ydata - good_fitted_y\n",
       "    \n",
       "    plot(x, bad_res, marker='^', linestyle='', color='red', label='full_fit')\n",
-      "    plot(fitting_xdata, good_res, marker='^', linestyle='', color='blue', label='partial_fit')\n",
+      "    plot(fitting_xdata, good_res, marker='^', linestyle='', color='green', label='partial_fit')\n",
       "    plot(array([x[0],x[-1]),array([0,0]),linestyle='--')\n",
       "    show()"
      ]
@@ -1569,17 +1569,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Thus far our fitting process has assumed all the data points are equally significant in many cases however we know that some of the measurements we have made are much more uncertain than others, we'd like to provide the fitting algorithm with this information so that when it tries to find the best gradient and intercept it cares more about the points that have greater certainty than those measurements we have less confidence in.\n",
+      "Thus far our fitting process has assumed all the data points are equally significant. In many cases however we know that some of the measurements we have made are much more uncertain than others, we'd like to provide the fitting algorithm with this information so that when it tries to find the best gradient and intercept it cares more about the points that have greater certainty than those measurements we have less confidence in.\n",
       "\n",
-      "Let's imagine have some measurements of the pressure of a Nobel gas in a fixed container as the temperature is increased. Lets llook at the data:\n",
+      "Let's imagine have some measurements of the pressure of a nobel gas in a fixed container as the temperature is increased. Lets look at the data:\n",
       "\n",
       "    gas_data = loadtxt('ideal_gas_data.txt')\n",
       "    temp = gas_data[:,0]\n",
       "    pressure = gas_data[:,1]\n",
       "\n",
       "    plot(temp, pressure, marker='^', linestyle='')\n",
-      "    xlabel('Temperature /K')\n",
-      "    ylabel('Pressure /Pa')\n",
+      "    xlabel('T /K')\n",
+      "    ylabel('p /Pa')\n",
       "    show()"
      ]
     },
@@ -1599,11 +1599,13 @@
       "\n",
       "Hence that if we plot pressure against temperature for a fixed number moles of gas in a fixed volume we should have a straight line with gradient $nR/V$. We will use the fact that we know we have 1 mole of gas and that the volume of the box is $2.4*10^{-2} m^3$ to determine an estimate for the gas constant. \n",
       "\n",
-      "We also know that that the instrument we are using to measure the pressure becomes less and less accurate the hotter it gets. Infact let us suppose that our instrument is calibrated to perform perfect measurements at zero degrees C but that error associated with measurements grows as the square of the temperature above 0 degrees C. We'll use the **errorbar** function to visualise our data together with the uncertainty.\n",
+      "We also know that the instrument we used to measure the pressure becomes less and less precise the hotter it gets. Infact let us suppose that our instrument is calibrated to perform perfect measurements at zero degrees Celsius (this is an idealization off course), but that error associated with measurements grows as the square of the temperature above zero degrees Celsius. We'll use the **errorbar** function to visualise our data together with the uncertainty.\n",
       "\n",
       "    std_e = (temp-273)**2\n",
       "\n",
-      "    errorbar(temp, noisey_p, marker='^', linestyle='', yerr=std_e) \n",
+      "    errorbar(temp, pressure, marker='^', linestyle='', yerr=std_e) \n",
+      "    xlabel('T /K')\n",
+      "    ylabel('p /Pa')\n",
       "    show()"
      ]
     },
@@ -1621,21 +1623,9 @@
      "source": [
       "Now that we have set the scene let's try fitting a straight line to our data and extracting an estimate for the ideal gas constant. Treating all the points equally we get the following:\n",
       "    \n",
-      "    poly_out = polyfit(temp, noisey_p, 1, cov=True)\n",
-      "    params = poly_out[0]\n",
-      "    poly_cov = poly_out[1]\n",
-      "    m = params[0]\n",
-      "    c = params[1]\n",
-      "\n",
-      "    plot(temp, m*temp+c, linestyle='--')\n",
-      "    errorbar(temp, noisey_p, marker='^', linestyle='', yerr=std_e) \n",
-      "    show()\n",
-      "\n",
-      "    print('Gradient = ',m)\n",
-      "    print('Intercept = ',c)\n",
-      "    print('Standard Error of the gradient = ', poly_cov[0][0]**0.5)\n",
-      "    print('Standard Error of the intercept = ', poly_cov[1][1]**0.5)\n",
-      "    print('Estimate for R =',2.4e-2*m)"
+      "    fit_nw = polyfit(temp, pressure, 1, cov=True)\n",
+      "    params_nw = fit_nw[0]\n",
+      "    params_nw_cov = fit_nw[1]"
      ]
     },
     {
@@ -1650,23 +1640,95 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Our error for the gradient is significant and our estimate for R is poor. Now we'll fit and provide weights to tell polyfit how significant the points are. The standard way of weighting is to weight a point by $\\frac{1}{\\sigma{}^2}$. where $\\sigma$ is the standard error. This will mean the points with the largest uncertainty have the smallest weights which is what we want.\n",
+      "    params_nw"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    params_nw_cov ** 0.5"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The graphical representation is:\n",
       "\n",
-      "    poly_out = polyfit(temp, noisey_p, 1, cov=True, w=1/std_e**2)\n",
-      "    params = poly_out[0]\n",
-      "    poly_cov = poly_out[1]\n",
-      "    m = params[0]\n",
-      "    c = params[1]\n",
+      "    m_nw = params_nw[0]\n",
+      "    c_nw = params_nw[1]\n",
       "\n",
-      "    plot(temp, m*temp+c, linestyle='--')\n",
-      "    errorbar(temp, noisey_p, marker='^', linestyle='', yerr=std_e) \n",
-      "    show()\n",
+      "    errorbar(temp, pressure, marker='^', linestyle='', yerr=std_e)\n",
+      "    plot(temp, m_nw*temp + c_nw, linestyle='--')\n",
+      "    xlabel('T /K')\n",
+      "    ylabel('p /Pa')\n",
+      "    show()"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Our uncertainty for the gradient is significant and our estimate for R is poor. Now we'll fit and provide weights to tell polyfit how significant the points are. The standard way of weighting is to weight a point by the inverse of the variance, i.e. $\\frac{1}{\\sigma^2}$. This will mean the points with the largest uncertainty have the smallest weights which is what we want.\n",
       "\n",
-      "    print('Gradient = ',m)\n",
-      "    print('Intercept = ',c)\n",
-      "    print('Standard Error of the gradient = ', poly_cov[0][0]**0.5)\n",
-      "    print('Standard Error of the intercept = ', poly_cov[1][1]**0.5)\n",
-      "    print('Estimate for R =',2.4e-2*m)"
+      "    fit_w = polyfit(temp, pressure, 1, cov=True, w=1/std_e**2)\n",
+      "    params_w = fit_w[0]\n",
+      "    params_w_cov = fit_w[1]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    params_w"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    params_w_cov ** 0.5"
      ]
     },
     {
@@ -1685,6 +1747,32 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We plot the two fits together and note the smaller weight of the points at higher temperature on the weighted fit\n",
+      "\n",
+      "    m_w = params_w[0]\n",
+      "    c_w = params_w[1]\n",
+      "    \n",
+      "    errorbar(temp, pressure, marker='^', linestyle='', yerr=std_e)\n",
+      "    plot(temp, m_nw*temp + c_nw, linestyle='--', color='red', label='not weighted')\n",
+      "    plot(temp, m_w*temp + c_w, linestyle='--', color='green', label='weighted')\n",
+      "    legend()\n",
+      "    xlabel('T /K')\n",
+      "    ylabel('p /Pa')\n",
+      "    show()"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "heading",
      "level": 1,
      "metadata": {},
@@ -1693,10 +1781,80 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Exercise 1"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Calculate and plot the residuals *for the first 11 data points* in the above data set for both the full fit and the partial fits. Can you send a trend in the residuals for the two fits?"
+      "File [Zn_flame.dat](files/Zn_flame.dat) stores the calibration data for a atomic absoption flame spectrophotometer to determine the concentration of zinc dication, $Zn^{2+}$, in a sample of river water. The left column corresponds to the concentration of the standards used in $\\text{mg.dm}^{-3}$, and the following 4 columns correspond to absorbance readings.\n",
+      "\n",
+      "* Look at the content of the file, and then read it into a variable."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Calculate the mean absorbance for each concentration, and plot it against each other. Include appropriate error bars in your plot."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Do a linear fit of your data taking into account the uncertainty associated with each point. Plot your linear fit along with the experimental data."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Plot the residuals of your fit. The Lambert-Beer law predicts a linear relation between concentration and absobance. Is the data obeying the Lambert-Beer law?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* The river water sample yielded an absorbance value of 0.119. What is the concentrtion of $Zn^{2+}$ in this river?"
      ]
     },
     {
