Tidying up exercises

--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:5a8de011c8bd99408c7f772932bf8b5521a01822ae1f2ffd16dd04618a7a1c8b"
+  "signature": "sha256:ec2c972519ef33701ff4288420a67c2ba216f19d137eb7149d5ed6f2b044eeff"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -410,7 +410,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There are many occasions where we want to plot data on a logarthimic scale. To illustrate this, in the next code cell we difine the variable *r_data* with some radioactivity data. Namelly the half lives for some radioactive elements and their atomic numbers. "
+      "There are many occasions where we want to plot data on a logarthimic scale. To illustrate this, in the next code cell we define the variable *r_data* with some radioactivity data. Namely the half lives for some radioactive elements and their atomic numbers. "
      ]
     },
     {
@@ -1185,7 +1185,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Polyfit allows us to fit not just to straight lines but also to polynomials of arbitrary degree as we're focusing on straight lines we include a 1 as the third argument. This means we will fit to a polynomial of degree one, i.e. a straight line.\n",
+      "Polyfit allows us to fit not just to straight lines but also to polynomials of arbitrary degree. As we're focusing on straight lines we include a 1 as the third argument. This means we will fit to a polynomial of degree one, i.e. a straight line.\n",
       "\n",
       "The outputs are the coefficents that define the fit. For a straight line that means the gradient and the intercept of the line.\n",
       "\n",
@@ -1381,7 +1381,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can see that the data is not a sraight line throughout. There is straight line portion of the curve is at the beginning, ending somewhere around x=40/y=1.1 i.e. the 11th data point.\n",
+      "We can see that the data is not a straight line throughout. The straight line portion of the curve is at the beginning, ending somewhere around x=40/y=1.1 i.e. the 11th data point.\n",
       "\n",
       "First we'll try applying our linear fit to the entire set of data:\n",
       "\n",
@@ -1569,9 +1569,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Thus far our fitting process has assumed all the data points are equally significant. In many cases however we know that some of the measurements we have made are much more uncertain than others, we'd like to provide the fitting algorithm with this information so that when it tries to find the best gradient and intercept it cares more about the points that have greater certainty than those measurements we have less confidence in.\n",
+      "Thus far our fitting process has assumed all the data points are equally significant. In many cases however we know that some of the measurements we have made are much more uncertain than others, we'd like to provide the fitting algorithm with this information so that when it tries to find the best gradient and intercept it cares more about the points we have greater certainty in than those we have less certainty in.\n",
       "\n",
-      "Let's imagine have some measurements of the pressure of a nobel gas in a fixed container as the temperature is increased. Lets look at the data:\n",
+      "Let's imagine we have some measurements of the pressure of a nobel gas in a fixed container as the temperature is increased. \n",
+      "\n",
+      "Lets look at the data:\n",
       "\n",
       "    gas_data = loadtxt('ideal_gas_data.txt')\n",
       "    temp = gas_data[:,0]\n",
@@ -1595,11 +1597,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We believe that the nobel gas obeys the equation $pV=nRT$ where p is pressure, V volume, n the number of moles of gas, R the ideal gas constant and T the temperature. \n",
+      "We believe that the nobel gas obeys the equation $pV=nRT$ where p is pressure, V volume, n the number of moles of gas, R the ideal gas constant and T is the temperature. \n",
       "\n",
-      "Hence that if we plot pressure against temperature for a fixed number moles of gas in a fixed volume we should have a straight line with gradient $nR/V$. We will use the fact that we know we have 1 mole of gas and that the volume of the box is $2.4*10^{-2} m^3$ to determine an estimate for the gas constant. \n",
+      "Hence that if we plot pressure against temperature fixing n and V, we should have a straight line with gradient $nR/V$. We will use the fact that we know we have 1 mole of gas and that the volume of the box is $2.4*10^{-2} m^3$ to determine an estimate for the gas constant. \n",
       "\n",
-      "We also know that the instrument we used to measure the pressure becomes less and less precise the hotter it gets. Infact let us suppose that our instrument is calibrated to perform perfect measurements at zero degrees Celsius (this is an idealization off course), but that error associated with measurements grows as the square of the temperature above zero degrees Celsius. We'll use the **errorbar** function to visualise our data together with the uncertainty.\n",
+      "We also know that the instrument we used to measure the pressure becomes less and less precise the hotter it gets. Infact let us suppose that our instrument is calibrated to perform perfect measurements at zero degrees Celsius (this is an idealization of course), but that the error associated with our measurements grows as the square of the temperature above zero degrees Celsius. We'll use the **errorbar** function to visualise our data together with the uncertainty.\n",
       "\n",
       "    std_e = (temp-273)**2\n",
       "\n",
@@ -1792,7 +1794,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "File [Zn_flame.dat](files/Zn_flame.dat) stores the calibration data for a atomic absoption flame spectrophotometer to determine the concentration of zinc dication, $Zn^{2+}$, in a sample of river water. The left column corresponds to the concentration of the standards used in $\\text{mg.dm}^{-3}$, and the following 4 columns correspond to absorbance readings.\n",
+      "File [Zn_flame.dat](files/Zn_flame.dat) stores the calibration data for an atomic absoption flame spectrophotometer to determine the concentration of zinc dication, $Zn^{2+}$, in a sample of river water. The left column corresponds to the concentration of the standards used in $\\text{mg.dm}^{-3}$, and the following 4 columns correspond to absorbance readings.\n",
       "\n",
       "* Look at the content of the file, and then read it into a variable."
      ]
