--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ce258cf243f7ab10395da39e4f241dd35e3dbf001c4d57082b899e7a8c57807f"
+  "signature": "sha256:041f0dbca0908c18fd50d5c974a22a0b36da17ef64ea5620f50e89f46fe984cd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -342,12 +342,13 @@
       "@interact(plt_range=[0,100000,1000])\n",
       "def plot_function(plt_range=1000):\n",
       "    for i,d in enumerate([0,3]):\n",
-      "        plot(  ms[i][:plt_range], label='Instrument {} mean'.format(d+1))\n",
-      "        plot(stds[i][:plt_range], label='Instrument {} standard deviation'.format(d+1))\n",
-      "        plot(stes[i][:plt_range], label='Instrument {} standard error'.format(d+1))\n",
+      "        plot(  ms[i], label='Instrument {} mean'.format(d+1))\n",
+      "        plot(stds[i], label='Instrument {} standard deviation'.format(d+1))\n",
+      "        plot(stes[i], label='Instrument {} standard error'.format(d+1))\n",
       "        \n",
       "        #statitistics start at a sample size of two\n",
-      "        plot(N[N<plt_range], stes[i][N[N<plt_range]-3], linestyle='', marker='o')\n",
+      "        plot(N stes[i][N-3], linestyle='', marker='o')\n",
+      "    xlimit([0,plt_range])\n",
       "    xlabel('Sample Size')\n",
       "    yscale('log')\n",
       "    legend()\n",
