--- a/C_Y1/exercises2/exercise2.ipynb
+++ b/C_Y1/exercises2/exercise2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:36d982bb55a03ac04bef4cdbbb38dee0661624c0e87764a70dd483d468d0f4f4"
+  "signature": "sha256:4893809769254bd910d4a1e5591dc18ad404c5e2c099dac99f6a25c736cc6f57"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -420,7 +420,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "##the right way to do this\n",
+      "##the most extensible way to do this\n",
       "#def spectralfit(x, *master_gauss_params):\n",
       "#    \"Fitting function as a sum of gaussians\"\n",
       "#    master_gauss_params = array(master_gauss_params).reshape(len(master_gauss_params)/3, 3)\n",
