--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:041f0dbca0908c18fd50d5c974a22a0b36da17ef64ea5620f50e89f46fe984cd"
+  "signature": "sha256:eb28e36f13526f09e70e3428c111a6dcce5ab5611dbf2b1a38ac20a8b5ee9329"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -337,22 +337,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from IPython.html.widgets import interact\n",
-      "\n",
-      "@interact(plt_range=[0,100000,1000])\n",
-      "def plot_function(plt_range=1000):\n",
-      "    for i,d in enumerate([0,3]):\n",
-      "        plot(  ms[i], label='Instrument {} mean'.format(d+1))\n",
-      "        plot(stds[i], label='Instrument {} standard deviation'.format(d+1))\n",
-      "        plot(stes[i], label='Instrument {} standard error'.format(d+1))\n",
-      "        \n",
-      "        #statitistics start at a sample size of two\n",
-      "        plot(N stes[i][N-3], linestyle='', marker='o')\n",
-      "    xlimit([0,plt_range])\n",
-      "    xlabel('Sample Size')\n",
-      "    yscale('log')\n",
-      "    legend()\n",
-      "    show()"
+      "desired_e = stes[1][-1]\n",
+      "sample_sizes = flatnonzero(stes[0] < desired_e)\n",
+      "no_samples_needed = sample_sizes[0]\n",
+      "no_samples_needed"
      ],
      "language": "python",
      "metadata": {},
@@ -362,10 +350,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "desired_e = stes[1][-1]\n",
-      "sample_sizes = nonzero(stes[0] < desired_e)\n",
-      "no_samples_needed = sample_sizes[0][0]\n",
-      "no_samples_needed"
+      "from IPython.html.widgets import interact\n",
+      "\n",
+      "@interact(plt_range=[0,100000,1000])\n",
+      "def plot_function(plt_range=8000):\n",
+      "\n",
+      "    for i,d in enumerate([0,3]):\n",
+      "        plot(  ms[i], label='Instrument {} mean'.format(d+1))\n",
+      "        plot(stds[i], label='Instrument {} standard deviation'.format(d+1))\n",
+      "        plot(stes[i], label='Instrument {} standard error'.format(d+1))\n",
+      "        \n",
+      "        ##statistics start at a sample size of two\n",
+      "        #plot(N, stes[i][N-3], linestyle='', marker='o')\n",
+      "    \n",
+      "    axhline(y=desired_e, linestyle='--', color='black')\n",
+      "    plot([no_samples_needed]*2, [ylim()[0], desired_e],linestyle='--')\n",
+      "    \n",
+      "    xlabel('Sample Size')\n",
+      "    xlim([0,plt_range])\n",
+      "    yscale('log')\n",
+      "    legend()\n",
+      "    show()"
      ],
      "language": "python",
      "metadata": {},
@@ -601,7 +606,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If you are having difficulties finding a suitable initial guess for the non-linear Arrhenius fit, or if on the other hand you got your answers quickly, let's try a different approach.\n",
+      "For those having difficulties finding a suitable initial guess for the non-linear Arrhenius fit, or if you managed to extract your activation energy quickly try a different approach:\n",
       "\n",
       "The Arrhenius equation is a non-linear function of $T$, but can be converted into a linear form by taking the natural logarithm of both sides of the equation:\n",
       "\n",
