--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:ec2c972519ef33701ff4288420a67c2ba216f19d137eb7149d5ed6f2b044eeff"
+  "signature": "sha256:d39cfc437507ccddbd885e707ae623df40e95a14c47f3c6f7b9cca7292118755"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1794,15 +1794,19 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "File [Zn_flame.dat](files/Zn_flame.dat) stores the calibration data for an atomic absoption flame spectrophotometer to determine the concentration of zinc dication, $Zn^{2+}$, in a sample of river water. The left column corresponds to the concentration of the standards used in $\\text{mg.dm}^{-3}$, and the following 4 columns correspond to absorbance readings.\n",
+      "File [zn_flame.txt](files/zn_flame.txt) stores calibration data for an atomic absoption flame spectrophotometer. The left column corresponds to concentration of the $Zn^{2+}$ in $\\text{mg.dm}^{-3}$, and the following 4 columns correspond to absorbance readings.\n",
       "\n",
-      "* Look at the content of the file, and then read it into a variable."
+      "* Look at the content of the file, and then load the data into a variable."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "data=loadtxt('zn_flame.txt')\n",
+      "conc_data = data[:,0]\n",
+      "abs_data = data[:, 1:]"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1811,13 +1815,18 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Calculate the mean absorbance for each concentration, and plot it against each other. Include appropriate error bars in your plot."
+      "* Calculate the mean absorbance associated with each concentration, and create a figure containing a plot of mean absorbance against concentrations making sure to label your axes appropriately."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "mean_abs = mean(abs_data, axis=1)\n",
+      "\n",
+      "plot(conc_data, mean_abs, linestyle='', marker='o')\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1826,13 +1835,40 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Do a linear fit of your data taking into account the uncertainty associated with each point. Plot your linear fit along with the experimental data."
+      "* Calculate the standard error associate with mean absorbances and generate plot including errorbars defined by the standard error - what's the problem?"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "std_e = std(abs_data, axis=1)/len(data)**0.5\n",
+      "\n",
+      "errorbar(conc_data, mean_abs, yerr=std_abs, linestyle='', marker='o')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Do a linear fit of the concentations against mean absorbance data, taking into account the uncertainty associated with each point. Plot your fit along with the experimental data."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "m,c = polyfit(conc_data, mean_abs, 1, w=1/std_e**2)\n",
+      "predicted_abs_data = conc_data*m+c\n",
+      "\n",
+      "plot(conc_data, predicted_abs_data, linestyle='--')\n",
+      "plot(conc_data, mean_abs, linestyle='', marker='o')\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1847,7 +1883,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "residuals = predicted_abs_data - mean_abs\n",
+      "plot(residuals, linestyle='', marker='o')\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1856,13 +1896,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* The river water sample yielded an absorbance value of 0.119. What is the concentrtion of $Zn^{2+}$ in this river?"
+      "* A river water sample passed through the spectrophotometer yielded an absorbance of 0.119. Use your linear fit to determining the concentration of $Zn^{2+}$ in this river?"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "(0.119-c)/m"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
